create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1821,7 +1821,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background39.jpg");
+  background-image: url("../../../assets/images/background317.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2648,10 +2648,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background410.jpg");
+  background-image: url("../../../assets/images/background418.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background113.jpg");
+  background-image: url("../../../assets/images/background121.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -3174,16 +3174,16 @@ section.lazy-placeholder:after {
   font-style: italic;
 }
 .cid-rCsGdC9aMR H3 {
-  text-align: right;
+  text-align: left;
   color: #149dcc;
 }
 .cid-rCsGdC9aMR H1 {
-  text-align: right;
+  text-align: left;
   color: #ffffff;
 }
 .cid-rCsGdC9aMR .mbr-text,
 .cid-rCsGdC9aMR .mbr-section-btn {
-  text-align: right;
+  text-align: left;
   color: #efefef;
 }
 .cid-rCyrJK9Jh4 {
@@ -4543,7 +4543,7 @@ section.lazy-placeholder:after {
 }
 .cid-rCsG8WtpKz .mbr-text,
 .cid-rCsG8WtpKz .mbr-section-btn {
-  text-align: right;
+  text-align: left;
   color: #efefef;
 }
 .cid-rD8hRR6OXE {
@@ -5792,7 +5792,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background410.jpg");
+  background-image: url("../../../assets/images/background418.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6367,7 +6367,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background410.jpg");
+  background-image: url("../../../assets/images/background418.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7619,7 +7619,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background113.jpg");
+  background-image: url("../../../assets/images/background121.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8866,7 +8866,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background410.jpg");
+  background-image: url("../../../assets/images/background418.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
@@ -13746,7 +13746,7 @@ section.lazy-placeholder:after {
 .cid-rDpy57lQcn {
   padding-top: 105px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/background515.jpg");
+  background-image: url("../../../assets/images/background523.jpg");
 }
 .cid-rDpy57lQcn .mbr-overlay {
   background-color: #879a9f;
@@ -14244,7 +14244,7 @@ section.lazy-placeholder:after {
 .cid-rDpy93NEgi {
   padding-top: 105px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/background.jpg");
+  background-image: url("../../../assets/images/mbr-1920x1279.jpg");
 }
 .cid-rDpy93NEgi .mbr-overlay {
   background-color: #767676;
@@ -14252,5 +14252,5 @@ section.lazy-placeholder:after {
 }
 .cid-rDpy93NEgi H4 {
   text-align: center;
-  color: #efefef;
+  color: #c1c1c1;
 }
