create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background31.jpg");
+  background-image: url("../../../assets/images/background311.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2453,10 +2453,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background15.jpg");
+  background-image: url("../../../assets/images/background115.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -5773,7 +5773,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -5787,6 +5787,18 @@ section.lazy-placeholder:after {
 }
 .cid-rCsHocVWU5 H3 {
   color: #55b4d4;
+}
+#custom-html-9c {
+  /* Type valid CSS here */
+}
+#custom-html-9c div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-9c p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rCsGosS9cL {
   padding-top: 30px;
@@ -5832,20 +5844,26 @@ section.lazy-placeholder:after {
 .cid-rCsGosS9cL .card-title {
   text-align: center;
 }
-.cid-rER4O3FQNP {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
+.cid-rF32dN8IPF {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
 }
-.cid-rER4O3FQNP .google-map {
+.cid-rF32dN8IPF P {
+  color: #767676;
+}
+.cid-rF32dN8IPF H1 {
+  color: #efefef;
+}
+.cid-rF337YqwUj .google-map {
   height: 25rem;
   position: relative;
 }
-.cid-rER4O3FQNP .google-map iframe {
+.cid-rF337YqwUj .google-map iframe {
   height: 100%;
   width: 100%;
 }
-.cid-rER4O3FQNP .google-map [data-state-details] {
+.cid-rF337YqwUj .google-map [data-state-details] {
   color: #6b6763;
   font-family: Montserrat;
   height: 1.5em;
@@ -5857,11 +5875,200 @@ section.lazy-placeholder:after {
   top: 50%;
   width: 100%;
 }
-.cid-rER4O3FQNP .google-map[data-state] {
+.cid-rF337YqwUj .google-map[data-state] {
   background: #e9e5dc;
 }
-.cid-rER4O3FQNP .google-map[data-state="loading"] [data-state-details] {
+.cid-rF337YqwUj .google-map[data-state="loading"] [data-state-details] {
   display: none;
+}
+.cid-rF35OJVKXJ {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-rF35OJVKXJ P {
+  color: #767676;
+}
+.cid-rF35OJVKXJ H1 {
+  color: #efefef;
+}
+.cid-rF31jeqLdj .main_wrapper {
+  position: relative;
+  height: 36rem;
+  width: 100%;
+  background-color: #c0c0c0;
+}
+.cid-rF31jeqLdj .main_wrapper .b_wrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+  pointer-events: none;
+}
+.cid-rF31jeqLdj .main_wrapper .b_wrapper .block {
+  height: 300px;
+  background-color: #ffffff;
+  pointer-events: fill;
+}
+.cid-rF31jeqLdj .main_wrapper .b_wrapper .block .block_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+.cid-rF31jeqLdj .google-map {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+.cid-rF31jeqLdj .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rF31jeqLdj .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rF31jeqLdj .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rF31jeqLdj .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-rF31jeqLdj .main_wrapper .b_wrapper {
+    display: block;
+    height: unset;
+  }
+  .cid-rF31jeqLdj .google-map {
+    position: relative;
+  }
+  .cid-rF31jeqLdj .container {
+    max-width: 100%;
+    padding: 0;
+  }
+}
+.cid-rF31UEbf3i {
+  padding-top: 90px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rF31UEbf3i [class^="socicon-"]:before,
+.cid-rF31UEbf3i [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+.cid-rF31UEbf3i .btn-social {
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 0;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  position: relative;
+  color: #232323;
+  cursor: pointer;
+  border-color: #149dcc;
+}
+.cid-rF31UEbf3i .btn-social i {
+  top: 0;
+  line-height: 44px;
+  width: 44px;
+}
+.cid-rF31UEbf3i .btn-social:hover {
+  color: #fff;
+  background: #149dcc;
+}
+.cid-rF31UEbf3i .btn-social:hover i.socicon {
+  color: #ffffff !important;
+}
+.cid-rF31UEbf3i .btn-social + .btn {
+  margin-left: .1rem;
+}
+@media (max-width: 767px) {
+  .cid-rF31UEbf3i .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-rF4agHix7k .main_wrapper {
+  position: relative;
+  height: 40rem;
+  width: 100%;
+  background-color: #c0c0c0;
+}
+.cid-rF4agHix7k .main_wrapper .b_wrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+  pointer-events: none;
+}
+.cid-rF4agHix7k .main_wrapper .b_wrapper .block {
+  height: 300px;
+  background-color: #ffffff;
+  pointer-events: fill;
+}
+.cid-rF4agHix7k .main_wrapper .b_wrapper .block .block_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+.cid-rF4agHix7k .google-map {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+.cid-rF4agHix7k .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rF4agHix7k .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rF4agHix7k .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rF4agHix7k .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-rF4agHix7k .main_wrapper .b_wrapper {
+    display: block;
+    height: unset;
+  }
+  .cid-rF4agHix7k .google-map {
+    position: relative;
+  }
+  .cid-rF4agHix7k .container {
+    max-width: 100%;
+    padding: 0;
+  }
 }
 .cid-rDpNDyjFKg {
   padding-top: 30px;
@@ -5906,6 +6113,18 @@ section.lazy-placeholder:after {
 }
 .cid-rDpNDyjFKg .card-title {
   text-align: center;
+}
+#custom-html-9a {
+  /* Type valid CSS here */
+}
+#custom-html-9a div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-9a p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rCsKQGOIuY {
   padding-top: 90px;
@@ -6382,7 +6601,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -6393,6 +6612,18 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY .mbr-text,
 .cid-rCv4gQlglY .mbr-section-btn {
   text-align: center;
+}
+#custom-html-7n {
+  /* Type valid CSS here */
+}
+#custom-html-7n div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-7n p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rDWak2oubB {
   padding-top: 90px;
@@ -7354,7 +7585,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background15.jpg");
+  background-image: url("../../../assets/images/background115.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8569,7 +8800,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background42.jpg");
+  background-image: url("../../../assets/images/background412.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
@@ -12845,6 +13076,40 @@ section.lazy-placeholder:after {
 .cid-rDpKsFJobg H4 {
   text-align: center;
   color: #ffffff;
+}
+.cid-rEYfoq0Mti {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rEYfoq0Mti h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rEYfoq0Mti .wrap {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+}
+.cid-rEYfoq0Mti .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rEYfoq0Mti .card {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  word-wrap: break-word;
+}
+.cid-rEYfoq0Mti ellipse {
+  stroke: rgba(206, 206, 206, 0.4);
+}
+.cid-rEYfoq0Mti path {
+  stroke: #149dcc;
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-rEYfoq0Mti .card {
+    -webkit-flex-basis: 33%;
+    flex-basis: 33%;
+  }
 }
 .cid-rEUsrIVUhT {
   padding-top: 30px;
