--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1091,7 +1091,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rExsQkiqM5 {
-  background-image: url("../../../assets/images/background1.jpg");
+  background-image: url("../../../assets/images/background110.jpg");
 }
 .cid-rExsQkiqM5 .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -1168,8 +1168,8 @@ section.lazy-placeholder:after {
   color: #cccccc;
 }
 .cid-rExsUxA60H {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rExsUxA60H h3 {
@@ -1183,7 +1183,7 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rExsUxA60H .panel-item {
-  background: #ffffff;
+  background: #eef1f2;
 }
 .cid-rExsUxA60H .card {
   word-wrap: break-word;
@@ -1256,7 +1256,7 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rExsXWLw24 .panel-item {
-  background: #ffffff;
+  background: #efefef;
 }
 .cid-rExsXWLw24 .card {
   word-wrap: break-word;
@@ -1626,7 +1626,7 @@ section.lazy-placeholder:after {
 .cid-rCfCEqDi3c {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background321.jpg");
+  background-image: url("../../../assets/images/background31.jpg");
 }
 .cid-rCfCEqDi3c .media-container-column {
   align-items: center;
@@ -2453,10 +2453,10 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCm87yBSKT {
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCm8dbG8Si {
-  background-image: url("../../../assets/images/background125.jpg");
+  background-image: url("../../../assets/images/background15.jpg");
 }
 .cid-rCm8dbG8Si .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -5773,7 +5773,7 @@ section.lazy-placeholder:after {
 .cid-rCsHocVWU5 {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCsHocVWU5 P {
   color: #767676;
@@ -6601,7 +6601,7 @@ section.lazy-placeholder:after {
 .cid-rCv4gQlglY {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCv4gQlglY H2 {
   text-align: center;
@@ -7585,7 +7585,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCy49dNvvy {
-  background-image: url("../../../assets/images/background125.jpg");
+  background-image: url("../../../assets/images/background15.jpg");
 }
 .cid-rCy49dNvvy .mbr-section-subtitle {
   letter-spacing: .2rem;
@@ -8800,7 +8800,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCQgI1AEja {
-  background-image: url("../../../assets/images/background422.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCQgI1AEja P {
   color: #767676;
